--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -56,7 +56,7 @@ div[vw] {
   bottom:   auto   !important;
   // botão de acess. fica em top:50% centralizado; descer metade dele (36px) + 8px gap
   top: calc(50% + 44px) !important;
-  z-index: 99990   !important;
+  z-index: 99000   !important;
 }
 
 div[vw] div[vw-access-button] {
